<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>rise</groupId>
  <artifactId>lib</artifactId>
  <version>0.0.1</version>
  <name>Rise Lib</name>
  
      <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sVersionFlattenMavenPlugin>1.5.0</sVersionFlattenMavenPlugin>
        <revision>1.0</revision>
        <sVersionLog4j>2.20.0</sVersionLog4j>
        <sVersionMongoDb>4.3.4</sVersionMongoDb>
        <sVersionGeoTools>20.0</sVersionGeoTools>
        <sVersionCommonsValidator>1.4.1</sVersionCommonsValidator>
        <sVersionMongoDb>4.3.4</sVersionMongoDb>
        <sVersionJackson>2.14.1</sVersionJackson>
        <sVersionMercurius>1.0</sVersionMercurius>
        <sVersionCommonsNet>3.11.1</sVersionCommonsNet>
    </properties>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${sVersionFlattenMavenPlugin}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
        </plugins>
    </build>    
    
  <dependencies>
        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${sVersionLog4j}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${sVersionLog4j}</version>
        </dependency>  
        <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
        <dependency>
            <groupId>commons-validator</groupId>
            <artifactId>commons-validator</artifactId>
            <version>${sVersionCommonsValidator}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync -->
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongodb-driver-sync</artifactId>
            <version>${sVersionMongoDb}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${sVersionJackson}</version>
        </dependency>
        <!-- WASDI's REPOSITORY OR LOCAL BUILD -->
        <dependency>
            <groupId>it.fadeout</groupId>
            <artifactId>mercurius</artifactId>
            <version>${sVersionMercurius}</version>
        </dependency>		  
        <!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>${sVersionCommonsNet}</version>
        </dependency>
        
  </dependencies>
  
      <!--
        HERE WE CONFIGURE OUR OWN NEXUS REPOSITORY
        TO DOWNLOAD LIBRARIES NOT AVAILABLE ON INTERNET
    -->
    <repositories>
        <repository>
            <id>wasdi-all-libraries</id>
            <name>WASDI - INTERNAL REPOSITORY - LIBRARIES</name>
            <url>${sWasdiNexusRepositoryLibrariesUrl}</url>
        </repository>
    </repositories>
</project>